[package]
name = "faesd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stabby = { version = "3.0.3",  features = ["libloading"] }
snippet-config-types = { git = "https://github.com/ZakharEl/snippet-config-types.git", version = "*" }
libloading = { version = "*" }
